--- a/Thesis/project.properties
+++ b/Thesis/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../appcompat_v7
-android.library.reference.2=../../../tess-two-master/tess-two
+android.library.reference.1=..\\appcompat_v7
+android.library.reference.2=../tess-two
